# RPICDB-Dashboard

./: main.py  pyproject.toml
static/css/: main.css  style.css
templates/: index.html  layout.html  manage.html
utils/: botutils.py  dbutils.py  dcutils.py  ytutils.py
